docs/0.12/_sources/api/gammapy.data.HDUIndexTable.rst.txt
HDUIndexTable
=============

.. currentmodule:: gammapy.data

.. autoclass:: HDUIndexTable
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~HDUIndexTable.ColumnClass
      ~HDUIndexTable.VALID_HDU_CLASS
      ~HDUIndexTable.VALID_HDU_TYPE
      ~HDUIndexTable.base_dir
      ~HDUIndexTable.colnames
      ~HDUIndexTable.dtype
      ~HDUIndexTable.groups
      ~HDUIndexTable.has_mixin_columns
      ~HDUIndexTable.hdu_class_unique
      ~HDUIndexTable.hdu_type_unique
      ~HDUIndexTable.iloc
      ~HDUIndexTable.indices
      ~HDUIndexTable.info
      ~HDUIndexTable.loc
      ~HDUIndexTable.loc_indices
      ~HDUIndexTable.mask
      ~HDUIndexTable.masked
      ~HDUIndexTable.meta
      ~HDUIndexTable.obs_id_unique

   .. rubric:: Methods Summary

   .. autosummary::

      ~HDUIndexTable.add_column
      ~HDUIndexTable.add_columns
      ~HDUIndexTable.add_index
      ~HDUIndexTable.add_row
      ~HDUIndexTable.argsort
      ~HDUIndexTable.as_array
      ~HDUIndexTable.convert_bytestring_to_unicode
      ~HDUIndexTable.convert_unicode_to_bytestring
      ~HDUIndexTable.copy
      ~HDUIndexTable.field
      ~HDUIndexTable.filled
      ~HDUIndexTable.from_pandas
      ~HDUIndexTable.group_by
      ~HDUIndexTable.hdu_location
      ~HDUIndexTable.index_column
      ~HDUIndexTable.index_mode
      ~HDUIndexTable.insert_row
      ~HDUIndexTable.itercols
      ~HDUIndexTable.keep_columns
      ~HDUIndexTable.keys
      ~HDUIndexTable.location_info
      ~HDUIndexTable.more
      ~HDUIndexTable.pformat
      ~HDUIndexTable.pprint
      ~HDUIndexTable.read
      ~HDUIndexTable.remove_column
      ~HDUIndexTable.remove_columns
      ~HDUIndexTable.remove_indices
      ~HDUIndexTable.remove_row
      ~HDUIndexTable.remove_rows
      ~HDUIndexTable.rename_column
      ~HDUIndexTable.replace_column
      ~HDUIndexTable.reverse
      ~HDUIndexTable.row_idx
      ~HDUIndexTable.show_in_browser
      ~HDUIndexTable.show_in_notebook
      ~HDUIndexTable.sort
      ~HDUIndexTable.summary
      ~HDUIndexTable.to_pandas
      ~HDUIndexTable.write

   .. rubric:: Attributes Documentation

   .. autoattribute:: ColumnClass
   .. autoattribute:: VALID_HDU_CLASS
   .. autoattribute:: VALID_HDU_TYPE
   .. autoattribute:: base_dir
   .. autoattribute:: colnames
   .. autoattribute:: dtype
   .. autoattribute:: groups
   .. autoattribute:: has_mixin_columns
   .. autoattribute:: hdu_class_unique
   .. autoattribute:: hdu_type_unique
   .. autoattribute:: iloc
   .. autoattribute:: indices
   .. autoattribute:: info
   .. autoattribute:: loc
   .. autoattribute:: loc_indices
   .. autoattribute:: mask
   .. autoattribute:: masked
   .. autoattribute:: meta
   .. autoattribute:: obs_id_unique

   .. rubric:: Methods Documentation

   .. automethod:: add_column
   .. automethod:: add_columns
   .. automethod:: add_index
   .. automethod:: add_row
   .. automethod:: argsort
   .. automethod:: as_array
   .. automethod:: convert_bytestring_to_unicode
   .. automethod:: convert_unicode_to_bytestring
   .. automethod:: copy
   .. automethod:: field
   .. automethod:: filled
   .. automethod:: from_pandas
   .. automethod:: group_by
   .. automethod:: hdu_location
   .. automethod:: index_column
   .. automethod:: index_mode
   .. automethod:: insert_row
   .. automethod:: itercols
   .. automethod:: keep_columns
   .. automethod:: keys
   .. automethod:: location_info
   .. automethod:: more
   .. automethod:: pformat
   .. automethod:: pprint
   .. automethod:: read
   .. automethod:: remove_column
   .. automethod:: remove_columns
   .. automethod:: remove_indices
   .. automethod:: remove_row
   .. automethod:: remove_rows
   .. automethod:: rename_column
   .. automethod:: replace_column
   .. automethod:: reverse
   .. automethod:: row_idx
   .. automethod:: show_in_browser
   .. automethod:: show_in_notebook
   .. automethod:: sort
   .. automethod:: summary
   .. automethod:: to_pandas
   .. automethod:: write
